--- a/emiliano/index.html
+++ b/emiliano/index.html
@@ -6,6 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hola Mundo! (｡･∀･)ﾉﾞ</h1>
+  <h1>Hola Mundo!</h1>
+  <h1>(ヘ･_･)ヘ┳━┳</h1>
+  <h1> (╯‵□′)╯︵┻━┻</h1>
 </body>
 </html>
