--- a/index.html
+++ b/index.html
@@ -58,10 +58,36 @@
 
       <main>
         <section class="row">
-
+          <article class="col-md-3">
+            <div>
+              <img src="./assets/imagenes/81kN3ZgSSGL._AC_UF894,1000_QL80_.jpg" alt="">
+              <h3>Super Mario</h3>
+            </div>
+          </article>
+          <article class="col-md-3">
+            <div>
+              <img src="./assets/imagenes/street.jpg" alt="">
+              <h3>Street Figther</h3>
+            </div>
+          </article>
+          <article class="col-md-3">
+            <div>
+              <img src="./assets/imagenes/street.jpg" alt="">
+              <h3>Street Figther</h3>
+            </div>
+          </article>
+          <article class="col-md-3">
+            <div>
+              <img src="./assets/imagenes/street.jpg" alt="">
+              <h3>Street Figther</h3>
+            </div>
+          </article>
         </section>
         <section class="row">
-
+          <article class="col-md-3"></article>
+          <article class="col-md-3"></article>
+          <article class="col-md-3"></article>
+          <article class="col-md-3"></article>
         </section>
       </main>
 
