--- a/vistas/contactus.html
+++ b/vistas/contactus.html
@@ -3,23 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso FullStack</title>
+    <title>Contactanos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
-    <link rel="stylesheet" href="./assets/css/footer.css">
-    <link rel="stylesheet" href="./assets/css/styles.css">
-    <!--style>
-        .columna{
-            background-color: #00FF00;
-        }
-
-        div{
-            background-color: #d67331;
-        }
-    </style-->
+    <link rel="stylesheet" href="../assets/css/footer.css">
+    <link rel="stylesheet" href="../assets/css/contactus.css">
 </head>
 <body>
-    <!-- comentario -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
             <img src="https://upload.wikimedia.org/wikipedia/en/c/c5/Gamers_logo.png" width="200" alt="">
@@ -33,97 +23,36 @@
             <a class="nav-link" href="#">Lanzamientos</a>
             <a class="nav-link" href="#">Modo de Juego</a>
             <a class="nav-link" href="#">Ofertas</a>
-            <a class="nav-link" href="./vistas/contactus.html">Contactanos</a>
           </div>
         </div>
-      </nav>
-      
-      <div class="banner">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./assets/imagenes/forza.webp" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="./assets/imagenes/maxresdefault.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="./assets/imagenes/maxresdefault2.jpeg" class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </button>
+    </nav>
+
+    <main>
+        <div class="container">
+            <form action="../controlador/clientesController.php" method="post">
+                <div class="form-group">
+                    <label for="txtNombre">Nombre Completo</label>
+                    <input id="txtNombre" name="txtNombre" class="form-control" type="text">
+                </div>
+                <div class="form-group">
+                    <label for="txtEmail">Correo Electrónico</label>
+                    <input id="txtEmail" name="txtEmail" class="form-control" type="email">
+                </div>
+                <div class="form-group">
+                    <label for="txtTelefono">Telefono</label>
+                    <input id="txtTelefono" name="txtTelefono" class="form-control" type="tel">
+                </div>
+                <div class="form-group">
+                    <label for="txtComentarios">Comentarios</label>
+                    <textarea name="txtComentarios" id="txtComentarios" cols="30" rows="10" class="form-control"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar Comentarios</button>
+                <button type="button" class="btn btn-danger">Regresar</button>
+            </form>
         </div>
-      </div>
+    </main>
 
-      <main>
-        <section class="row spacing">
-          <article class="col-md-3">
-            <div class="columna">
-              <img src="./assets/imagenes/mario.webp" alt="">
-              <h3>Super Mario</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, distinctio ipsam sequi non recusandae possimus dolorum iusto incidunt ex harum eveniet eius beatae nesciunt deleniti vel id aliquam earum rem!</p>
-            </div>
-          </article>
-          <article class="col-md-3">
-            <div class="columna">
-              <img src="./assets/imagenes/mario.webp" alt="">
-              <h3>Street Figther</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, suscipit doloribus incidunt reprehenderit molestias tenetur beatae rem consectetur quibusdam nesciunt, adipisci nisi veniam et, sunt doloremque quaerat unde explicabo? Magni.</p>
-            </div>
-          </article>
-          <article class="col-md-3">
-            <div class="columna">
-              <img src="./assets/imagenes/mario.webp" alt="">
-              <h3>Street Figther</h3>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis corrupti quis officiis ipsa explicabo sed aperiam quae molestiae necessitatibus assumenda dolorem facere, incidunt itaque laboriosam illum? Corrupti odit blanditiis dicta.</p>
-            </div>
-          </article>
-          <article class="col-md-3">
-            <div class="columna">
-              <img src="./assets/imagenes/mario.webp" alt="">
-              <h3>Street Figther</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quas, repellendus a similique doloremque voluptate delectus minus aspernatur? Iure, dolorem ut commodi non nulla molestias at dicta temporibus adipisci culpa.</p>
-            </div>
-          </article>
-        </section>
-        <section class="row spacing">
-          <article class="col-md-4">
-            <img src="assets/imagenes/81kN3ZgSSGL._AC_UF894,1000_QL80_.jpg" alt="" srcset="">
-            <div class="info_curso">
-                <h3>Mario Bros</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem eos veniam fuga optio consequatur maiores dolore, quis quos doloremque reprehenderit facilis ullam qui odit obcaecati! Similique cumque sapiente rerum architecto?</p>
-            </div>
-          </article>
-          <article class="col-md-4">
-            <img src="assets/imagenes/81kN3ZgSSGL._AC_UF894,1000_QL80_.jpg" alt="" srcset="">
-            <div class="info_curso">
-                <h3>Mario Bros</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi illo nulla molestias ipsa omnis, nam quasi qui veritatis aliquam velit deleniti quis eligendi voluptatibus laboriosam! Sequi quas vel dignissimos exercitationem.</p>
-            </div>
-          </article>
-          <article class="col-md-4">
-            <img src="assets/imagenes/81kN3ZgSSGL._AC_UF894,1000_QL80_.jpg" alt="" srcset="">
-            <div class="info_curso">
-                <h3>Mario Bros</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi illo nulla molestias ipsa omnis, nam quasi qui veritatis aliquam velit deleniti quis eligendi voluptatibus laboriosam! Sequi quas vel dignissimos exercitationem.</p>
-            </div>
-          </article>
-        </section>
-      </main>
-
-      <footer id="dk-footer" class="dk-footer">
+    <footer id="dk-footer" class="dk-footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-lg-4">
@@ -318,10 +247,6 @@
             </button>
         </div>
         <!-- End Back to top -->
-      </footer>
-
+    </footer>
 </body>
 </html>
-
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
